objects/sumoapp__SumoEventStream__e.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Attendees__c</fullName>
        <label>Attendees</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Color__c</fullName>
        <description>Html Color Code</description>
        <label>Color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventId__c</fullName>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Exception__c</fullName>
        <label>Exception</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__GenerateVirtualDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Virtual Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsUncommited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUncommited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationId__c</fullName>
        <label>Location Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__MeetingUrl__c</fullName>
        <label>Meeting URL</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Organizer__c</fullName>
        <label>Organizer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ProcessId__c</fullName>
        <label>Process Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PropagatedToExternalCalendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Propagated To External Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Resources__c</fullName>
        <label>Resources</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__SumoEventId__c</fullName>
        <label>Sumo Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__TravelTimeAfter__c</fullName>
        <label>Travel Time After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__TravelTimeBefore__c</fullName>
        <label>Travel Time Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sumo Event Stream</label>
    <pluralLabel>Sumo Event Stream</pluralLabel>
</CustomObject>